<resources>
    <string name="app_name">Garden Monitor</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="send">Send</string>
    <string name="service_disconnected">Service disconnected. Restart the activity.</string>
    <string name="set_clock">Set Clock</string>
    <string name="restart">Restart</string>
    <string name="temperature_added_to_server">Temperature added to server</string>
    <string name="temperature_server_failed">Failed to add temperature to server</string>
    <string name="need_temperature">Sensor temperature unknown</string>
    <string name="send_temperature">Send temp</string>
</resources>
